fixed select goaltemplate on firefox

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -223,10 +223,11 @@ header{
 
  #goal_template_form{
     width:684px;
+	overflow:hidden;
     select{
         background: transparent;
         -webkit-appearance: none;
-        width:391px;
+        width:120%;
         height:61px;
         padding:3px 0 0 10px;
         border:none;
@@ -237,6 +238,8 @@ header{
     .select-bg{
         background: url("select-bg.png") no-repeat;
         float:left;
+		width:391px;
+		overflow: hidden;
     }
 }
 
@@ -250,6 +253,9 @@ header{
     right:0;
 	.facebook_login_header{
 		margin-left: 20px;
+	}
+	input{
+		width: 200px;
 	}
 	#sign_in_btn {
 	    width: 105px;
